<resources>
    <string name="app_name">Note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reminder">Напоминание</string>
    <string name="set_reminder">Установить дату</string>
    <string name="add_contact">Добавить контакт</string>
    <string name="completed">Выполнено</string>
    <string name="selectedDate">Выбранная дата:</string>
    <string name="selectedTime">Выбранное время:</string>
</resources>