<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".fragments.CreateNoteFragment">


    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminder"
        android:minHeight="50dp"
        android:gravity="top"
        android:layout_margin="20dp"
        android:padding="16dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_setreminder"
        android:layout_margin="20dp"
        android:clickable="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageview"
                android:src="@drawable/ic_notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/titleDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectedDate"
                android:selectAllOnFocus="false"
                android:textSize="16sp"
                android:layout_marginStart="7dp"
                app:layout_constraintStart_toEndOf="@+id/imageview"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/titleTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectedTime"
                android:textSize="16sp"
                android:layout_marginStart="7dp"
                app:layout_constraintTop_toBottomOf="@+id/titleDate"
                app:layout_constraintStart_toEndOf="@+id/imageview"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_reminder"
                android:selectAllOnFocus="false"
                android:textSize="16sp"
                android:layout_marginStart="7dp"
                app:layout_constraintStart_toEndOf="@+id/titleDate"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="7dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_date"
                app:layout_constraintStart_toEndOf="@+id/titleTime"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_addContact"
                android:textSize="25sp"
                android:text="@string/add_contact"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="false"
                android:textSize="16sp"
                android:layout_marginLeft="7dp"
                app:layout_constraintStart_toEndOf="@+id/civ_image"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginLeft="7dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                app:layout_constraintStart_toEndOf="@+id/civ_image"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>